# no-layout

./: .gitattributes  .gitignore  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml
.config/: mustache.yaml
.config/flake/: outputs.nix
.config/project/: default.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: CHANGELOG.md  README.md  no-layout-rule.cabal  no-layout.cabal
core/docs/: license-report.md
core/src/: NoLayout.hs
core/tests/data/fail/: ClassLayout.hs  DoLayout.hs  ImplicitLayout.hs  LetLayout.hs  WhereLayout.hs
core/tests/data/pass/: ExplicitBraces.hs
core/tests/integration/: test.hs
core/tests/integration/Test/: ExplicitBraces.hs
core/tests/unit/: test.hs
