cabal-version: 3.0
-- ^ Cabal 3.0 is the first with the `Universal-FOSS-exception-1.0` SPDX license
--   exception.

name: no-layout
version: 0.0.1.0
synopsis: Disable Haskell’s “layout rule”
description:
  A GHC plugin that disables the use of the “layout rule” for significant whitespace in Haskell code.
maintainer: Greg Pfeil <greg@technomadic.org>
author: Greg Pfeil <greg@technomadic.org>
copyright: 2025 Greg Pfeil
license: AGPL-3.0-only WITH Universal-FOSS-exception-1.0 OR LicenseRef-proprietary
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.proprietary
category:
build-type: Custom
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  GHC == {
    9.2.1,
    9.4.1, 9.4.8,
    9.6.1, 9.6.7,
    9.8.1, 9.8.4,
    9.10.1, 9.10.2, 9.10.3,
    9.12.1, 9.12.2,
    9.14.1
  }

homepage: https://github.com/sellout/no-layout#readme
bug-reports: https://github.com/sellout/no-layout/issues

source-repository head
  type: git
  location: https://github.com/sellout/no-layout.git
  subdir: core

source-repository this
  type: git
  location: https://github.com/sellout/no-layout.git
  subdir: core
  -- NB: This is the repo version, which is distinct from the package version.
  tag: v0.1.0

custom-setup
  setup-depends:
    -- TODO: Due to haskell/cabal#3751, `Cabal` has to be specified even though
    --       there’s no direct dependency. Its lower bound needs to be at least
    --       as high as `cabal-version` at the top of this file, and Hackage
    --       requires it to have _some_ upper bound. (Since there’s no direct
    --       dependency, it doesn’t use PVP bounds.)
    --
    -- TODO: Due to haskell/cabal#9375, 3.10.3 is required in order to load
    --       plugins from a `ghc-options` field. Unfortunately, GHCs prior to
    --       9.8.3 include an older Cabal, so a newer one may need to be
    --       manually installed.
    Cabal >= 3.10.3 && < 99,
    base ^>= {4.16.0, 4.17.0, 4.18.0, 4.19.0, 4.20.0, 4.21.0, 4.22.0},
    cabal-doctest ^>= {1.0.0},

flag noisy-deprecations
  description:
    Prior to GHC 9.10, the @DEPRECATED@ pragma can’t distinguish between terms
    and types. Consenquently, you can get spurious warnings when there’s a name
    collision and the name in the other namespace is deprecated. Or you can
    choose to not get those warnings, at the risk of not being warned when
    there’s a name collision and the namespace you’re referencing is the one
    that’s deprecated.
  default: True
  -- Because disabling this flag won’t help the solver.
  manual: True

flag lint
  description:
    Build with linting plugins enabled. This is intended for developers of this
    package.
  default: False
  -- Because disabling this flag won’t help the solver.
  manual: True

-- This mimics the GHC2024 extension
-- (https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/control.html?highlight=doandifthenelse#extension-GHC2024),
-- but supporting compilers back to GHC 9.2. If the oldest supported compiler
-- is GHC 9.10, then this stanza can be removed and `import: GHC2024` can be
-- replaced by `default-language: GHC2024`.
common GHC2024
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveLift
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    MonadComprehensions
    LambdaCase
    RoleAnnotations
    UnicodeSyntax

common defaults
  import: GHC2024
  build-depends:
    base ^>= {4.16.0, 4.17.0, 4.18.0, 4.19.0, 4.20.0, 4.21.0, 4.22.0},
    ghc-compat-plugin ^>= {0.1.0},
  ghc-options:
    -fplugin GhcCompat
    -fplugin-opt GhcCompat:minVersion=9.2.1
    -fplugin-opt GhcCompat:reportIncompatibleExtensions=error
    -Weverything
    -- This one just reports unfixable things, AFAICT.
    -Wno-all-missed-specialisations
    -- Type inference good.
    -Wno-missing-local-signatures
    -- Warns even when `Unsafe` is explicit, not inferred. See
    -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
    -Wno-unsafe
    -Wno-missing-deriving-strategies
  default-extensions:
    BlockArguments
    DefaultSignatures
    FunctionalDependencies
    LexicalNegation
    LiberalTypeSynonyms
    PackageImports
    ParallelListComp
    QualifiedDo
    RecursiveDo
    StrictData
    TemplateHaskellQuotes
    TransformListComp
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoPatternGuards
    NoStarIsType
  if flag(noisy-deprecations)
    cpp-options:
      -DSELLOUT_NOISY_DEPRECATIONS
  if flag(lint)
    build-depends:
      no-recursion,
    ghc-options:
      -fplugin=NoRecursion
    if impl(ghc >= 9.4)
      build-depends:
        henforcer ^>= {1.0.0},
      ghc-options:
        -fplugin Henforcer

library
  import: defaults
  hs-source-dirs:
    src
  build-depends:
    ghc ^>= {9.2.1, 9.4.1, 9.6.1, 9.8.1, 9.10.1, 9.12.1, 9.14.1},
  exposed-modules:
    NoLayout

test-suite doctests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is: doctests.hs
  build-depends:
    doctest,
    no-layout,
  ghc-options:
    -fno-warn-missing-import-lists
  if impl(ghc >= 8.10.1)
    ghc-options:
      -- `doctest` requires the package containing the doctests as a dependency
      -- to ensure it gets built before this test-suite, even though the package
      -- appears to be unused.
      -Wno-unused-packages
  -- NB: Adjust this to contain any components that may have doctests (including
  --     executables).
  x-doctest-components:
    lib
  -- TODO: The sections below here are necessary because we don’t have control
  --       over the generated `Build_doctests.hs` file. So we have to silence
  --       all of its warnings one way or another.
  ghc-options:
    -Wno-safe
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
  default-extensions:
    -- Since we can’t add `{-# LANGUAGE Safe -#}` to the generated
    -- “Build_doctests.hs”, we set it here, and that means it has to match
    -- doctests.hs, which is `Unsafe`.
    Unsafe

test-suite unit
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests/unit
  main-is: test.hs
  build-depends:
    ghc,
    ghc-paths ^>= {0.1.0},
    no-layout,

test-suite integration
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests/integration
  main-is: test.hs
  other-modules:
    Test.ExplicitBraces
  build-depends:
    no-layout,
  ghc-options:
    -fplugin NoLayout
